feat(chat): 添加对话历史面板与快照功能
- 新增 HistoryPanel 类，支持显示对话历史记录
- 在 ChatPanel 中实现对话快照导出与加载功能
- 添加新建对话按钮 (+)，支持保存当前对话至历史
- 实现双击历史记录加载对话至聊天面板
- 添加异步对话总结服务，提升历史面板可读性
- 优化 HUD 文本输入组件，支持三击全选与鼠标滚轮横向滚动
- 修复键盘事件路由逻辑，确保输入框焦点状态下可正常输入
- 统一多个面板控件高度为 16，提升视觉一致性
- 调整 BlueprintPanel 与 SettingsPanel 控件尺寸与布局
- 修复 MultilineTextInput 鼠标点击定位逻辑与视图同步问题